arquivo: 05-ntp.sh, acréscimo das linhas: locale-gen pt_BR.UTF-8, localectl set-locale LANG=pt_BR.UTF-8 e correção do
comando: update-locale LANG=pt_BR.UTF-8 LC_ALL=pt_BR.UTF-8 LANGUAGE="pt_BR:pt:en", será mostrado em vídeo o acréscimo
da informação no arquivo: /etc/default/keyboard da variável: XKBVARIANT="intl" quando se utiliza teclado en_US-UTF-8,
acréscimo do programa Neofetch no script do OpenSSH personalizando o arquivo: /etc/motd com o logo do Ubuntu Server.

14/01/2022 - Robson Vaamonde - Criação dos script: 33-asterisk.sh, customização dos seus arquivos de configuração e
atualização para a nova versão: 19.1.x., acréscimo da dependência: php-soap no arquivo: 00-paramentros.sh referente
a Loja Virtual do Wordpress reportado pelo Prof. José de Assis.

13/01/2022 - Robson Vaamonde - Criação do arquivo PORTS com especificações das Portas TCP e UDP dos Serviços de Rede
utilizados pelos Scripts, atualização do versão do OpenFire para: 4.67, alteração da versão do ownCloud para o arquivo
latest.tar.bz2, atualização do arquivo: 11-wordpress.sh alteração do nome do arquivo de download para: wordpress.zip
correção da localização do arquivo: wp-config.php na hora de aplicar o Salt, acréscimo da listagem TCP da porta 514
no script: 14-loganalyzer.sh, acréscimo da edição do arquivo PHP no script: 25-owncloud.sh, atualização da versão do 
Perl: 5.30.0 no arquivo: zz-ocsinventory-restapi.conf, acréscimo da porta 6379 do Redis Server no script: 23-ntopng.sh

12/01/2022 - Robson Vaamonde - Acréscimo da linha: add-apt-repository restricted em todos os scripts do curso, 
acréscimo das opções do serviço do NFS no arquivo: hosts.allow.

11/01/2022 - Robson Vaamonde - Correção dos Bugs referente ao uso do Wordpress que foram reportados pelo Prof. José
de Assis, correções dos arquivos: 00-parametros.sh, 00-default.conf, htaccess, wordpress.conf e wp-config.php, 
criação dos scripts: salt.sh e updateip.sh como ferramenta de suporte ao Wordpress.
